smart-parking-be/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: smart-parking
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: smartparking2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smart-parking-portal-service
            port:
              number: 4201

      - path: /ParkingEvent
        pathType: Prefix
        backend:
          service:
            name: apiparkingevent-service
            port:
              number: 8080
      - path: /ParkingArea
        pathType: Prefix
        backend:
          service:
            name: apiparkingarea-service
            port:
              number: 8080
      - path: /User
        pathType: Prefix
        backend:
          service:
            name: apiuser-service
            port:
              number: 8080
